--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "vitetstest",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://grimbirb.github.io/vitetstest/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
